Cleanup
Signed-off-by: Janek Laudan <laudan@simunto.com>